--- a/LojaRazor/Web.config
+++ b/LojaRazor/Web.config
@@ -19,6 +19,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <!--indioma da apliacao-->
+    <globalization uiCulture="pt-br"/>
+    
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
